<resources>
    <string name="app_name">cortatebien</string>
    <string name="title_servicios_empresa">""</string>
    <string name="title_activity_menu_principal">Bienvenido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hola  </string>
    <string name="nav_header_subtitle">Ahorra tiempo y cuida tu estilo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_reservas">Mis Reservas</string>
    <string name="menu_cerrar_sesion">Cerrar sesion</string>
    <string name="menu_principal">Inicio</string>

    <string name="Usuario">Nombre de usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Email">Correo electrónico</string>
    <string name="Registrar">Registrar</string>
    <string name="Cancelar">Cancelar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_barberia">BARBERIA</string>
    <string name="tab_peluqueria">PELUQUERIA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
